fix modal overflow

--- a/client/app/styles/application.styl
+++ b/client/app/styles/application.styl
@@ -454,8 +454,7 @@ a.btn.btn-cozy.left.prev
         height: 60px
 
 .modal-body
-    max-height: calc(100vh - 210px);
-    overflow-y: auto;
+    max-height: calc(100vh - 210px)
 
     img.selected
         border: 5px solid blue
